--- a/PlatformService/PlatformService.csproj
+++ b/PlatformService/PlatformService.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameWorkCore.InMemory" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
   </ItemGroup>
 
